--- a/_posts/2023-03-25-学过-html-都会的-html-轮播图.md
+++ b/_posts/2023-03-25-学过-html-都会的-html-轮播图.md
@@ -15,14 +15,14 @@ tags:
 两种方法创建出简单的轮播图
 1.通过 **javascript** 去解决图片轮播
 [网页预览](https://turing158.github.io/ppt-JavaScript/)[github可能图片加载的有点慢]
-![展示](https://img-blog.csdnimg.cn/17e46054a85a486699aaad1ae07de66c.gif#pic_center)
+<img src="https://img-blog.csdnimg.cn/17e46054a85a486699aaad1ae07de66c.gif" alt="middle"/>
 2.通过引用 **bootstrap** 去创建轮播图
 [网页预览](https://turing158.github.io/ppt_bootstrap/)[github可能图片加载的有点慢]
-![展示1](https://img-blog.csdnimg.cn/437bde6eef12482cbaec11b807a499cb.gif#pic_center)
+<img src="https://img-blog.csdnimg.cn/437bde6eef12482cbaec11b807a499cb.gif" alt="middle"/>
 
 # 轮播图Javascript方法
 *预览*
-![展示](https://img-blog.csdnimg.cn/17e46054a85a486699aaad1ae07de66c.gif#pic_center)
+![展示](https://img-blog.csdnimg.cn/17e46054a85a486699aaad1ae07de66c.gif)
 ## 1.先创建 div 去容纳要放进去的内容
 ！**id** 随意，但不能重复！
 ```html
