--- a/_posts/2024-02-15-Flutter-入门到入土.md
+++ b/_posts/2024-02-15-Flutter-入门到入土.md
@@ -18,7 +18,7 @@ tags:
 
 ---
 
-1. 前往[Java Downloads | Oracle](https://www.oracle.com/java/technologies/downloads/)下载所需要的**jdk**，**JDK17**版本够用了
+1. 前往[Java Downloads - Oracle](https://www.oracle.com/java/technologies/downloads/)下载所需要的**jdk**，**JDK17**版本够用了
 
    ![image-20240221220731441](https://www.z4a.net/images/2024/02/22/image-20240221220731441.png)
 
@@ -54,7 +54,7 @@ tags:
 
 ---
 
-1. 前往**Flutter**官网下载**FlutterSDK**，[Flutter SDK archive | Flutter](https://docs.flutter.dev/release/archive?tab=windows#windows)
+1. 前往**Flutter**官网下载**FlutterSDK**，[Flutter SDK archive - Flutter](https://docs.flutter.dev/release/archive?tab=windows#windows)
 
    ![image-20240221221501653](https://www.z4a.net/images/2024/02/22/image-20240221221501653.png)
 
@@ -731,7 +731,7 @@ textScaleFactor已弃用，用textScaler代替，用于字体显示倍率
 - `ImageRepeat.repeatX`：横向重复，纵向不重复
 - `ImageRepeat.repeatY`：纵向重复，横向不重复
 
-**width | height**：图片宽高
+**width 和 height**：图片宽高
 
 ### Image.asset
 
