--- a/_posts/2023-03-25-学过-html-都会的-html-轮播图.md
+++ b/_posts/2023-03-25-学过-html-都会的-html-轮播图.md
@@ -7,24 +7,37 @@ categories:
 tags:
 ---
 
-@[TOC](html轮播图)
 
 # 开篇(唠嗑)
 为什么说学过html都会?
+
 因为我也刚学没多久，所运用的知识都是基础
+
 两种方法创建出简单的轮播图
+
+
 1.通过 **javascript** 去解决图片轮播
+
 [网页预览](https://turing158.github.io/ppt-JavaScript/)[github可能图片加载的有点慢]
-<img src="https://img-blog.csdnimg.cn/17e46054a85a486699aaad1ae07de66c.gif" alt="middle"/>
+
+[由于博客无法加载动图，只能点进去查看](https://img-blog.csdnimg.cn/17e46054a85a486699aaad1ae07de66c.gif)
+
 2.通过引用 **bootstrap** 去创建轮播图
+
 [网页预览](https://turing158.github.io/ppt_bootstrap/)[github可能图片加载的有点慢]
-<img src="https://img-blog.csdnimg.cn/437bde6eef12482cbaec11b807a499cb.gif" alt="middle"/>
+
+[由于博客无法加载动图，只能点进去查看](https://img-blog.csdnimg.cn/437bde6eef12482cbaec11b807a499cb.gif)
+
 
 # 轮播图Javascript方法
 *预览*
-![展示](https://img-blog.csdnimg.cn/17e46054a85a486699aaad1ae07de66c.gif)
+
+[由于博客无法加载动图，只能点进去查看](https://img-blog.csdnimg.cn/17e46054a85a486699aaad1ae07de66c.gif)
+
 ## 1.先创建 div 去容纳要放进去的内容
+
 ！**id** 随意，但不能重复！
+
 ```html
 	<div id="ppt">
 		<!-- 按钮 -->
@@ -41,7 +54,9 @@ tags:
 ```
 ================================================================================================
 ## 2.写css修饰
+
 ###	1)先将 ppt 的整体设置好 [ #ppt ]
+
 ```css
 	position: absolute;
     width: 100%;
@@ -80,8 +95,9 @@ tags:
 	    background-position: -50% 50%;
 	}
 ```
-================================================================================================
+==============================================================================
 ### 2) 按钮的css[ .il 和 .ir ]
+
 调整按钮大小
 ```css
 	width:50px;
@@ -124,6 +140,7 @@ tags:
 	}
 ```
 #### 整体的按钮代码(左右按钮只是将 left 改成 right )
+
 ```css
 	.il{
 	    width:50px;
@@ -169,6 +186,7 @@ tags:
 ================================================================================================
 ### 3)装点的 div[ #ppt_dot ]
 设置位置，设置大小，得看你由多少张图片对应多少点设置
+
 ```css
 	position: absolute;
     width:200px;
@@ -257,17 +275,25 @@ var img = 1;
 
 ### 1)改变图片
 先创建个方法，让图片能变成其他的图片
-	先用个变量获取 **id**
+
+先用个变量获取 **id**
 ```javascript
 	var a = document.getElementById("ppt");
 ```
 再用 **变量.style.backgroundImage="url(图片路径)";**
-	**img**变量用来储存序号，最好将图片名字重命名为可以由数字序号排列的名字
-	例如：**img1.png   img2.png   img3.png ......**
-	**"url(./top/top"+img+".png)"** 可能有变量难理解[高手除外哈]
-	假设四张图片，
-	其实这个路径就是从 **top1.png => top4.png** 中切换
-	我这个代码的第一个top是**文件夹**，第二个top是**文件名+序号**
+
+**img**变量用来储存序号，最好将图片名字重命名为可以由数字序号排列的名字
+
+例如：**img1.png   img2.png   img3.png ......**
+
+**"url(./top/top"+img+".png)"** 可能有变量难理解[高手除外哈]
+
+假设四张图片，
+
+其实这个路径就是从 **top1.png => top4.png** 中切换
+
+我这个代码的第一个top是**文件夹**，第二个top是**文件名+序号**
+
 ```javascript
 	a.style.backgroundImage="url(./top/top"+img+".png)";
 ```
@@ -291,7 +317,8 @@ function change_img(){
     var d = document.getElementById("pd4");
 ```
 通过 **switch** 来判断 **img**
-	记得在定义方法时引入变量
+
+记得在定义方法时引入变量
 ```javascript
 switch(img){
 	case 1:
@@ -305,8 +332,10 @@ switch(img){
 }
 ```
 最后在每个对应的变量，去设置点的颜色
-	通过 **变量.style.backgroundColor="颜色";**
-	去改变 **css** 中的 **background-Color** 属性
+
+通过 **变量.style.backgroundColor="颜色";**
+
+去改变 **css** 中的 **background-Color** 属性
 ```css
 	a.style.backgroundColor="颜色";
     b.style.backgroundColor="颜色";
@@ -352,13 +381,15 @@ function change_dot(img){
 ```
 ### 3)向左向右切换图片
 向左向右切换图片无非就是改变变量
-	向左:变量-1    向右:变量+1
+
+向左:变量-1    向右:变量+1
 ```javascript
 	img--;//向左
 	img++;//向右
 ```
 但是不能一直减下去
-	通过 **if** 去判断，并将 **变量img** 设置成 **开头或结尾**
+
+通过 **if** 去判断，并将 **变量img** 设置成 **开头或结尾**
 
 ```javascript
 	if(img<=0){//当图片已经是最前面一张时，再次点击会使 img = 4
@@ -369,13 +400,15 @@ function change_dot(img){
     }
 ```
 把改变图片的方法和改变点的方法放到最后
-	能使图片变换时不会切换到图片序号为 0 或 5 的图片
+
+能使图片变换时不会切换到图片序号为 0 或 5 的图片
 ```javascript
 	change_img();
     change_dot(img);
 ```
 然后我们需要将方法跟按钮绑定
-	用 **onclick = "方法"** 绑定
+
+用 **onclick = "方法"** 绑定
 ```html
 	<div class="il" onclick="ppt_left()">&lt;-</div>
     <div class="ir" onclick="ppt_right()">-&gt;</div>
@@ -419,24 +452,32 @@ html
     </div>
 ```
 ### 4)开始轮播图片
-为了让图片隔一段时间切换
-	运用 **setInterval** 来定义一个计时器
-	格式为 **变量 = setInterval (函数,延迟);**
+为了让图片隔一段时间切
+
+运用 **setInterval** 来定义一个计时器
+
+格式为 **变量 = setInterval (函数,延迟);**
 	
 我想让他向左轮播
-	那就用我们刚刚定义的 向左改变图片 的方法去 改变图片:
+
+那就用我们刚刚定义的 向左改变图片 的方法去 改变图片:
 ```javascript
 	ppt_time = setInterval("ppt_left()",3000);
 ```
 我想让他向右轮播
-	那就用我们刚刚定义的 向右改变图片 的方法去 改变图片:
+
+那就用我们刚刚定义的 向右改变图片 的方法去 改变图片:
 ```javascript
 	ppt_time = setInterval("ppt_right()",3000);
 ```
 为了让网页一打开，图片就开始轮播，那就需要再 **js** 最顶部，
+
 加入	**window.onloadstart = 方法名 ;**
-	最好时在 **img变量** 的下面
-	这样网页一打开，就会运行 开始轮播方法
+
+最好时在 **img变量** 的下面
+
+这样网页一打开，就会运行 开始轮播方法
+
 ```javascript
 	window.onloadstart=ppt_start();//页面打开运行函数
 ```
@@ -451,18 +492,22 @@ function ppt_start(){
 }
 ```
 ### 5)停止轮播图片
+
 通过 **clearInterval(计时器变量)** 来停止清除刚刚创建的计时器
 ```javascript
 	clearInterval(ppt_time);
 ```
 当我们想自己切换图片，但又不想在切换时自动轮播图片，
+
 我们就可以在 div 中加入 **onmouseover=”方法名“**  的属性，
-	使得鼠标放在 **div** 上时，运行 停止轮播 方法
+
+使得鼠标放在 **div** 上时，运行 停止轮播 方法
 ```html
 	<div id="ppt" onmouseover="ppt_stop()"></div>
 ```
-	当我们看完想看的图片后，将鼠标移走想让其继续轮播图片时
-	用 onmouseleave="方法名" 属性，让鼠标移离 div 时，继续轮播
+当我们看完想看的图片后，将鼠标移走想让其继续轮播图片时
+
+用 onmouseleave="方法名" 属性，让鼠标移离 div 时，继续轮播
 ```html
 	<div id="ppt" onmouseover="ppt_stop()" onmouseleave="ppt_start()"></div>
 ```
@@ -550,7 +595,8 @@ html
 ```
 ## javascript篇结束
 通过 **html+css+javascript** 的运用，使得图片能够轮播
-	没啥技术含量，学得差不多，有逻辑，就能想的出来
+
+没啥技术含量，学得差不多，有逻辑，就能想的出来
 ### 整体代码
 html
 ```html
@@ -755,16 +801,25 @@ function change_img(){
 }
 ```
 # 轮播图bootstrap方法
-![展示1](https://img-blog.csdnimg.cn/437bde6eef12482cbaec11b807a499cb.gif#pic_center)
+[由于博客无法加载动图，只能点进去查看](https://img-blog.csdnimg.cn/437bde6eef12482cbaec11b807a499cb.gif)
 ## 准备说明
+
 **bootstrap** 可以说是 **html** 的一个库，通过 **bootstrap** 我们可以通过给的模板，直接创建一个轮播图组件
-	我们得先将 **bootstrap库** 给下载下来
+
+我们得先将 **bootstrap库** 给下载下来
+
 去下载====> [官网](https://getbootstrap.com/docs/5.1/getting-started/download/) <====去下载
+
 打不开官网的话，点 [这里](https://starfalls.lanzoul.com/iLB6k0qziosh)
+
 但是尽量在官网下，迫不得已再点 [这里](https://starfalls.lanzoul.com/iLB6k0qziosh)
+
 我们制作的轮播图，仅仅只是用到了库里的 [bootstrap.css](https://starfalls.lanzoul.com/i00BR0qzix7a) 和 [bootstrap.js](https://starfalls.lanzoul.com/i00BR0qzix7a) 文件
+
 我们通过创建 html 来引入这两货，就能简单的制作出轮播图
+
 接下来，一步一步，教你创建轮播图，其实你可以跳转到最后，直接抄模板
+
 ## 1.引入 bootstrap 的两个文件
 在 **head** 中，引入两个库
 ```html
@@ -786,10 +841,14 @@ function change_img(){
 </html>
 ```
 ## 2.创个 div 装轮播图
+
 创建个 **div** 去装轮播图，通过 **data-bs-ride** 属性，来获取 **bootstrap库** 里的 **carousel** 创建轮播图组件
-	将 **class** 类设置为 **carousel slide** [除了 **ppt** 可以改成任意名字外，其他的别动]
-	**ppt** 为轮播图组件的 **id**
-	**data-bs-interval** 属性为设置轮播图播放速度，以 **毫秒/ms** 为单位
+
+将 **class** 类设置为 **carousel slide** [除了 **ppt** 可以改成任意名字外，其他的别动]
+
+**ppt** 为轮播图组件的 **id**
+
+**data-bs-interval** 属性为设置轮播图播放速度，以 **毫秒/ms** 为单位
 ```html
 	<div id="ppt" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000"></div>
 ```
@@ -802,8 +861,11 @@ function change_img(){
 	</div>
 ```
 2)在 **class** 为 **carousel-inner** 的类下，创建 **div** ，要多少图片，就创建多少 **div** 。
-	3)将每个 **div** 的 **class** 类为 **carousel-item** 。
-	4)有个特殊的 **class** 为 **carousel-item active** ，这个 **div** 则是第一个展示的 **div**
+
+3)将每个 **div** 的 **class** 类为 **carousel-item** 。
+
+4)有个特殊的 **class** 为 **carousel-item active** ，这个 **div** 则是第一个展示的 **div**
+
 ```html
 	<div class="carousel-inner"> 
 		 <div class="carousel-item active"> <!-- 这里这里，到这里了 -->
@@ -847,9 +909,12 @@ function change_img(){
   	</div>
 ```
 2)在此类里，用 **li** 或者 **button** 创建出按钮 [这里我用 **li** ]
-	3)将每个按钮都增加上 **data-bs-target** 属性，属性设置为轮播图组件的 **id**，记得 # 
-	4)将每个按钮都增加上 **data-bs-slide-to** 属性，属性设置为轮播图序号，以 **0** 开头
-	5)将第一个，或者你想让哪张图片先展示，就添加 **class** 为 **active** 的类
+
+3)将每个按钮都增加上 **data-bs-target** 属性，属性设置为轮播图组件的 **id**，记得 # 
+
+4)将每个按钮都增加上 **data-bs-slide-to** 属性，属性设置为轮播图序号，以 **0** 开头
+
+5)将第一个，或者你想让哪张图片先展示，就添加 **class** 为 **active** 的类
 ```html
 	<li data-bs-target="#ppt" data-bs-slide-to="0" class="active"></li>
 	<li data-bs-target="#ppt" data-bs-slide-to="1"></li>
@@ -873,6 +938,7 @@ function change_img(){
    	<button></button>
 ```
 2)两个按钮的 **class** 分别为 **carousel-control-prev** 和 **carousel-control-next**
+
 ===================[看英文都知道 **prev** 之前，即往左      **next** 下一个，即向右]
 ```html
 	<button class="carousel-control-prev"></button>
@@ -884,14 +950,16 @@ function change_img(){
    	<button class="carousel-control-next" type="button" data-bs-target="#ppt"></button>
 ```
 4)绑定 **bootstrap库** 自定的 **js**
-	  通过属性 **data-bs-slide** 分别设置为 **prev** 和 **next** 
+
+通过属性 **data-bs-slide** 分别设置为 **prev** 和 **next** 
 -------------------------------------------------向左----向右
 ```html
 	<button class="carousel-control-prev" type="button" data-bs-target="#ppt" data-bs-slide="prev"></button>
    	<button class="carousel-control-next" type="button" data-bs-target="#ppt" data-bs-slide="next"></button>
 ```
 5)在 **button** 里加入 **span** 属性，去引入图标
-	这是内置的左图标
+
+这是内置的左图标
 ```html
 <span class="carousel-control-prev-icon"></span>
 ```
@@ -900,7 +968,8 @@ function change_img(){
 <span class="carousel-control-next-icon"></span>
 ```
 你也可以自定义图标，可以自己通过 **css** 去自定义按钮的大小[默认的按钮很大]
-	这些都是可以自定义样式的，包括下面的 **小横杠[点]**
+
+这些都是可以自定义样式的，包括下面的 **小横杠[点]**
 ### 整体代码如下
 ```html
 	<button class="carousel-control-prev" type="button" data-bs-target="#ppt" data-bs-slide="prev">
@@ -912,8 +981,10 @@ function change_img(){
 ```
 ## bootstrap篇结束
 **bootstrap库** ，可以让我们更快，更方便的创建一个轮播图组件，提升效率，而且还可以自定义
+
 ### 完整代码
 我仅仅只是给按钮添加了点**逐渐明显**的动画
+
 ```html
 <!DOCTYPE html>
 <html lang="en">
@@ -973,5 +1044,7 @@ function change_img(){
 ```
 # 结束
 **JavaScript** 方法我们可以通过自己的逻辑，去创建
+
 **bootstrap** 方法我们可以通过给定的库，去快速的创建
+
 两种方法都很简单，学过 **html** 的都会！
