--- a/_posts/2024-02-15-Flutter-入门到入土.md
+++ b/_posts/2024-02-15-Flutter-入门到入土.md
@@ -1,6 +1,6 @@
 ---
 title: Flutter入门到入土
-description: lutter是谷歌基于Dart语言开发的一款开源、免费且跨平台的App开发框架，所以建议先学习Dart语言的基本语法，很像JavaScript和Java，学起来很快。这篇文章打算直接总结如何使用Flutter框架，所以比较长，但是讲解的东西比较简短
+description: Futter是谷歌基于Dart语言开发的一款开源、免费且跨平台的App开发框架，所以建议先学习Dart语言的基本语法，很像JavaScript和Java，学起来很快。这篇文章打算直接总结如何使用Flutter框架，所以比较长，但是讲解的东西比较简短
 date: 2024-2-15 15:25:32
 categories:
  - Flutter
