--- a/_posts/2024-02-15-Flutter-入门到入土[总].md
+++ b/_posts/2024-02-15-Flutter-入门到入土[总].md
@@ -1,6 +1,6 @@
 ---
-title: Flutter入门到入土
-description: Futter是谷歌基于Dart语言开发的一款开源、免费且跨平台的App开发框架，所以建议先学习Dart语言的基本语法，很像JavaScript和Java，学起来很快。这篇文章打算直接总结如何使用Flutter框架，所以比较长，但是讲解的东西比较简短
+title: Flutter-入门到入土[总]
+description: Flutter是谷歌基于Dart语言开发的一款开源、免费且跨平台的App开发框架，所以建议先学习Dart语言的基本语法，很像JavaScript和Java，学起来很快。这篇文章打算直接总结如何使用Flutter框架，所以比较长，但是讲解的东西比较简短
 date: 2024-2-15 15:25:32
 categories:
  - Flutter
@@ -1662,6 +1662,114 @@ class BtnTest1 extends StatelessWidget{
 
 ### 修改按钮样式
 
----
+想要修改按钮的样式，需要通过`ButtonStyle`去调整，而里面的参数比较的复杂
+
+#### ButtonStyle的属性
+
+| 属性              | 说明         | 参数                                                         |
+| ----------------- | ------------ | ------------------------------------------------------------ |
+| `backgroundColor` | 背景颜色     | `MaterialStateProperty.all(Colors.*)`                        |
+| `foregroundColor` | 组件内容颜色 | `MaterialStateProperty.all(Colors.*)`                        |
+| `shadowColor`     | 阴影颜色     | `MaterialStateProperty.all(Colors.*)`                        |
+| `shape`           | 按钮形状     | `MaterialStateProperty.all(*)` 这个比较特殊                  |
+| `padding`         | 内边距       | `MaterialStateProperty.all(const EdgeInsets.*)`              |
+| `elevation`       | 阴影范围     | `MaterialStateProperty.all(num)`                             |
+| `side`            | 边框         | `MaterialStateProperty.all(const BorderSide(width: num,color: Colors.*))` |
+| `alignment`       | 组件对齐方式 | `Alignment.*`                                                |
+
+#### 设置按钮圆角
+
+`shape`这个属性的参数比较多变
+
+若要设置圆角，参数为：`MaterialStateProperty.all(RoundedRectangleBorder(borderRadius: BorderRadius.circular(num)))`
+
+![image-20240223160855740](https://www.z4a.net/images/2024/02/23/image-20240223160855740.png)
+
+```dart
+class BtnTest2 extends StatelessWidget{
+  const BtnTest2({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return SizedBox(
+      width: 150,
+      height: 50,
+      child: ElevatedButton(
+        onPressed: (){},
+        style: ButtonStyle(
+          backgroundColor: MaterialStateProperty.all(Colors.lightBlueAccent),
+          foregroundColor: MaterialStateProperty.all(Colors.purple),
+          elevation: MaterialStateProperty.all(10),
+          alignment:Alignment.center,
+          shadowColor:MaterialStateProperty.all(Colors.black12),
+          padding:MaterialStateProperty.all(const EdgeInsets.all(10)),
+          shape: MaterialStateProperty.all(RoundedRectangleBorder(
+            borderRadius: BorderRadius.circular(10)
+          )),
+        ),
+        child: const Text("修改各种属性"),
+      ),
+    );
+  }
+}
+```
+
+
+
+若要设置圆形，参数为：`MaterialStateProperty.*all*(const CircleBorder(side: BorderSide(color: Color.fromARGB(0, 0, 0, 0))))`
+
+![image-20240223160921240](https://www.z4a.net/images/2024/02/23/image-20240223160921240.png)
+
+```dart
+class BtnTest3 extends StatelessWidget{
+  const BtnTest3({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return SizedBox(
+      width: 120,
+      height: 120,
+      child: ElevatedButton(
+        onPressed: (){},
+        style: ButtonStyle(
+          shape: MaterialStateProperty.all(
+            const CircleBorder(side: BorderSide(color: Color.fromARGB(0, 0, 0, 0))
+          )),
+        ),
+        child: const Text("圆形按钮"),
+      ),
+    );
+  }
+}
+```
+
+#### 设置按钮边框
+
+![image-20240223161246468](https://www.z4a.net/images/2024/02/23/image-20240223161246468.png)
+
+```dart
+class BtnTest4 extends StatelessWidget{
+  const BtnTest4({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return SizedBox(
+      width: 120,
+      height: 120,
+      child: OutlinedButton(
+        onPressed: (){},
+        style: ButtonStyle(
+          side: MaterialStateProperty.all(
+            const BorderSide(width: 1,color: Colors.brown)
+          ),
+        ),
+        child: const Text("修改边框"),
+      ),
+    );
+  }
+}
+```
+
+------
 
 *待更新 ...*
