--- a/_posts/2023-12-07-SFMC-启动器.md
+++ b/_posts/2023-12-07-SFMC-启动器.md
@@ -1,3 +1,16 @@
+---
+title: SFMC - 简陋的MC启动器
+description: 通过JMCCC编写的一款Minecraft启动器，由JavaFX构建界面，目前界面待完善，可能不是很好看
+date: 2024-2-15 15:25:32
+categories:
+ - Java
+ - Minecraft
+ - JavaFX
+tags:
+---
+
+
+
 <div>
     <div style="position:absolute;width:100%;height:100%"  onclick="window.location.href='https://github.com/Turing158/SFMC'"></div>
     <img src="https://github-readme-stats.vercel.app/api/pin/?username=Turing158&theme=dark&repo=SFMC"/>
@@ -25,7 +38,7 @@
 - [Thank you for using](#thank-you-for-using)
 ### Brief Introduction
 > A Minecraft launcher written through JMCCC, built by Java FX with an interface that is currently incomplete and may not be very attractive
-> ![home](doc/home.png)
+> ![home](https://www.z4a.net/images/2024/02/23/home.png)
 
 ***
 
@@ -49,14 +62,14 @@
 ### Introduce
 > #### Main interface
 > On the left is the function list, Minecraft can be activated in the lower right corner, and the arrow on the right can select the version.
-> ![home](doc/home.png)
+> ![home](https://www.z4a.net/images/2024/02/23/home.png)
 > ***
 > #### Player Settings interface
 > There are currently two login methods, offline and Microsoft's legitimate login.  
 > Just log in offline and enter the username you want, Microsoft verification is quite troublesome.
 >
 > New Panel：
-> ![newPlayer](doc/newPlayer.png)
+> ![newPlayer](https://www.z4a.net/images/2024/02/23/newPlayer.png)
 > Microsoft Verification Steps：
 > 1. After selecting Microsoft Verification, verification will not start. You must click on **Microsoft Verification** to start verification.
 > 2. After clicking, a webpage will pop up asking you to enter the verification code. [if the browser is not opened, the default browser may not be set]
@@ -64,7 +77,7 @@
 > 4. After successful verification, a page with completed verification will pop up, and you can then close the page.
 >
 > New panel:
-> ![newVerify.png](doc/newVerify.png)
+> ![newVerify.png](https://www.z4a.net/images/2024/02/23/newVerify.png)
 > 5. After waiting for 4-10 seconds, it will automatically jump to your character information page.
 >
 > **Possible issues that may arise during validation：**  
@@ -88,14 +101,14 @@
 > #### Game Settings interface
 > You can select a game directory, adjust game memory, select the appropriate JRE version, adjust window size, and enable version isolation  
 > _I forgot to add **memory for automatic allocation**. I will add it later, as well as the jvm startup parameters and minecraft startup parameters._
-> ![setting](doc/Setting.png)
+> ![setting](https://www.z4a.net/images/2024/02/23/Setting.png)
 > ***
 > #### Download interface
 > Currently only supported for download **Minecraft**，**Forge**，**Fabric**  
 > _**Liteloader**is too rarely used and currently not supported_  
 > supported downloading the latest **Minecraft**，**Forge**  
 > **Fabric** is Only the latest
-> ![download](doc/download.png)
+> ![download](https://www.z4a.net/images/2024/02/23/download.png)
 ***
 ### Thank you for using
 > This starter **doesn't have much technical content** [after all, it's someone else's bag], it's purely for practice use  
@@ -122,7 +135,7 @@
 
 ### 简介
 > 通过JMCCC编写的一款Minecraft启动器，由JavaFX构建界面，目前界面待完善，可能不是很好看
-> ![home](doc/home.png)
+> ![home](https://www.z4a.net/images/2024/02/23/home.png)
 
 ***
 
@@ -146,14 +159,14 @@
 ### 介绍
 > #### 主界面
 > 左边为功能列表，右下角可启动Minecraft，右边的箭头可选择版本
-> ![home](doc/home.png)
+> ![home](https://www.z4a.net/images/2024/02/23/home.png)
 > ***
 > #### 玩家设置界面
 > 目前有两种登录方式，离线和微软的正版登录
 > 离线登录输入你想要的用户名即可，微软验证比较的麻烦
 >
 > 新界面
-> ![player](doc/newPlayer.png)
+> ![player](https://www.z4a.net/images/2024/02/23/newPlayer.png)
 > 微软验证步骤：
 > 1. 选择微软验证后，不会开始验证，得点击 **微软验证** 才能开始验证
 > 2. 点击后会弹出一个网页，会让你输入验证代码[若浏览器没打开可能没设置默认浏览器]
@@ -161,7 +174,7 @@
 > 4. 验证成功后，会弹出一个验证完成的页面，这下你就可以关闭页面
 >
 > 新界面
-> ![verify](doc/newVerify.png)
+> ![verify](https://www.z4a.net/images/2024/02/23/newVerify.png)
 > 5. 等待4-10秒后，会自动跳转到你的角色信息页面
 >
 > **可能在验证中出现的问题：**  
@@ -185,14 +198,14 @@
 > #### 游戏设置界面
 > 可以选择游戏目录，调整游戏内存，选择适合的jre版本，调整窗口大小，是否启用版本隔离  
 > _**自动分配内存**忘记添加上去了，后续会添加上去，还会添加jvm启动参数和minecraft的启动参数_
-> ![setting](doc/Setting.png)
+> ![setting](https://www.z4a.net/images/2024/02/23/Setting.png)
 > ***
 > #### 下载界面
 > 目前仅支持下载 **Minecraft**，**Forge**，**Fabric**  
 > _**Liteloader**太少用了，暂时不支持_  
 > 支持下载最新的 **Minecraft**，**Forge**  
 > **Fabric** 只有最新的
-> ![download](doc/download.png)
+> ![download](https://www.z4a.net/images/2024/02/23/download.png)
 ***
 ### 感谢使用
 > 这个启动器**没什么技术含量**[毕竟用的是别人的包]，纯属练习所用  
