--- a/_posts/2023-12-07-SFMC-启动器.md
+++ b/_posts/2023-12-07-SFMC-启动器.md
@@ -11,8 +11,7 @@ tags:
 
 
 
-<div>
-    <div style="position:absolute;width:100%;height:100%"  onclick="window.location.href='https://github.com/Turing158/SFMC'"></div>
+<div onclick="window.location.href='https://github.com/Turing158/SFMC'">
     <img src="https://github-readme-stats.vercel.app/api/pin/?username=Turing158&theme=dark&repo=SFMC"/>
 </div>
 
