--- a/_posts/2023-12-07-SFMC-启动器.md
+++ b/_posts/2023-12-07-SFMC-启动器.md
@@ -11,7 +11,7 @@ tags:
 
 
 
-<div onclick="window.location.href='https://github.com/Turing158/SFMC'">
+<div onclick="window.location.href='https://github.com/Turing158/SFMC'" target="_blank">
     <img src="https://github-readme-stats.vercel.app/api/pin/?username=Turing158&theme=dark&repo=SFMC"/>
 </div>
 
