--- a/_posts/2024-02-15-Flutter-入门到入土[总].md
+++ b/_posts/2024-02-15-Flutter-入门到入土[总].md
@@ -72,11 +72,31 @@ tags:
 
    若第三项出现问题，先安装**Android Studio**
 
-   如果`flutter doctor`时出现`cmdline-tools component is missing`
-
    Android-SDK的系统环境，未配置，在系统变量中新建并第一行输入`ANDROID_HOME`，第二行输入你安装**Android Studio**时，安装Android-SDK的路径，然后重启电脑，一般就行了
 
    ![image-20240221224246524](https://www.z4a.net/images/2024/02/22/image-20240221224246524.png)
+
+   如果`flutter doctor`时出现`cmdline-tools component is missing`
+
+   根据以下步骤：
+
+    1. 打开**Android Studio**，关闭项目，到开始页面，点最右边的竖着的三个点，选择**SDK Manager**
+
+       ![image-20240227133113310](https://www.z4a.net/images/2024/02/27/image-20240227133113310.png)
+
+    2. 点第二项**SDK Tools**，在下面找到**Android SDK Command-line Tools**并勾选，点击确定
+
+       ![image-20240227133341573](https://www.z4a.net/images/2024/02/27/image-20240227133341573.png)
+
+    3. 点击**确定***[我这里因为已经最新了，所以下载的东西与你们出问题的不一样]*
+
+       ![image-20240227133545643](https://www.z4a.net/images/2024/02/27/image-20240227133545643.png)
+
+    4. 等待这个界面下载，下载完成就点**完成**
+
+       ![image-20240227133616137](https://www.z4a.net/images/2024/02/27/image-20240227133616137.png)
+
+   如果还不行，推荐重新安装Android SDK！
 
 # 创建Flutter项目并运行
 
