--- a/_posts/2024-02-15-Flutter-入门到入土[总].md
+++ b/_posts/2024-02-15-Flutter-入门到入土[总].md
@@ -1790,6 +1790,365 @@ class BtnTest4 extends StatelessWidget{
 }
 ```
 
+## 事件
+
+### PointerEvents
+
+------
+
+最简单的事件监听，通过Listener()去监听子组件的行为 tips：以下的`e`和`event`都是`event`，只是个变量而已
+
+#### 属性
+
+| 属性             | 说明                                   |
+| ---------------- | -------------------------------------- |
+| `onPointerDown`  | 按下组件触发，参数:`(e)=>{}`           |
+| `onPointerMove`  | 按下并在组件内移动触发，参数:`(e)=>{}` |
+| `onPointerHover` | 移动到组件触发，参数:`(e)=>{}`         |
+| `onPointerUp`    | 按下后松开才触发，参数:`(e)=>{}`       |
+
+![image-20240228002642882](https://www.z4a.net/images/2024/02/28/image-20240228002642882.png)
+
+```dart
+class Test1 extends StatelessWidget{
+  const Test1({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return ListView(
+      children: [
+        ListTile(
+          title: Listener(
+            onPointerDown: (event) => print("按下组件触发：$event"),
+            child: const Text("按下组件触发"),
+          ),
+        ),
+        Container(height: 1,color: Colors.black87,),
+        ListTile(
+          title: Listener(
+            onPointerMove: (event) => print("按下并在组件内移动触发：$event"),
+            child: const Text("按下并在组件内移动触发"),
+          ),
+        ),
+        Container(height: 1,color: Colors.black87,),
+        ListTile(
+          title: Listener(
+            onPointerHover: (event) => print("移动到组件触发：$event"),
+            child: const Text("移动到组件触发"),
+          ),
+        ),
+        Container(height: 1,color: Colors.black87,),
+        ListTile(
+          title: Listener(
+            onPointerUp: (event) => print("按下后松开才触发：$event"),
+            child: const Text("按下后松开才触发"),
+          ),
+        ),
+      ],
+    );
+  }
+}
+```
+
+### GestureDetector
+
+------
+
+GestureDetector封装了非常多的触发类型，所以直接使用GestureDetector()组件可以直接使用这些监听类型
+
+#### Tap单击 属性
+
+------
+
+| 属性          | 说明                                                         |
+| ------------- | ------------------------------------------------------------ |
+| `onTapDown`   | 按下触发，参数`(e)=>{}`                                      |
+| `onTapUp`     | 抬起触发，参数`(e)=>{}`                                      |
+| `onTap`       | 按下后抬起[与抬起触发不同，这个两个条件都得有]，参数`()=>{}` |
+| `onTapCancel` | 按下后取消[可移出组件触发]，参数`()=>{}`                     |
+
+![image-20240228002720931](https://www.z4a.net/images/2024/02/28/image-20240228002720931.png)
+
+```dart
+class Test2 extends StatelessWidget{
+  const Test2({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return ListView(
+      children: [
+         ListTile(
+          title:GestureDetector(
+            onTapDown: (e) => print("按下触发：$e"),
+            child: const Text("按下触发"),
+          ),
+        ),
+        Container(height: 1,color: Colors.black87,),
+        ListTile(
+          title:GestureDetector(
+            onTapUp: (e) => print("抬起触发：$e"),
+            child: const Text("抬起触发"),
+          ),
+        ),
+        Container(height: 1,color: Colors.black87,),
+        ListTile(
+          title:GestureDetector(
+            onTap: () => print("按下后抬起[与抬起触发不同，这个两个条件都得有]：======="),
+            child: const Text("按下后抬起[与抬起触发不同，这个两个条件都得有]"),
+          ),
+        ),
+        Container(height: 1,color: Colors.black87,),
+        ListTile(
+          title:GestureDetector(
+            onTapCancel: () => print("按下后取消[可移出组件触发]：======="),
+            child: const Text("按下后取消[可移出组件触发]"),
+          ),
+        ),
+      ],
+    );
+  }
+}
+```
+
+#### DoubleTap双击 属性
+
+------
+
+| 属性                | 说明                                       |
+| ------------------- | ------------------------------------------ |
+| `onDoubleTap`       | 双击触发[必须按下抬起各两次]，参数`()=>{}` |
+| `onDoubleTapCancel` | 双击时取消[可移出组件触发]，参数`()=>{}`   |
+| `onDoubleTapDown`   | 双击时第二次点击触发，参数`(e)=>{}`        |
+
+![image-20240228002755697](https://www.z4a.net/images/2024/02/28/image-20240228002755697.png)
+
+```dart
+class Test3 extends StatelessWidget{
+  const Test3({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return ListView(
+      children: [
+        ListTile(
+          title:GestureDetector(
+            onDoubleTap: () => print("双击触发：======="),
+            child: const Text("双击触发[必须按下抬起各两次]"),
+          ),
+        ),
+        Container(height: 1,color: Colors.black87,),
+        ListTile(
+          title:GestureDetector(
+            onDoubleTapCancel: () => print("双击时取消[可移出组件触发]：======="),
+            child: const Text("双击时取消[可移出组件触发]"),
+          ),
+        ),
+        Container(height: 1,color: Colors.black87,),
+        ListTile(
+          title:GestureDetector(
+            onDoubleTapDown: (e) => print("双击时第二次点击触发：$e"),
+            child: const Text("双击时第二次点击触发"),
+          ),
+        ),
+      ],
+    );
+  }
+}
+```
+
+#### LongPress长按 属性
+
+------
+
+| 属性                    | 说明                                       |
+| ----------------------- | ------------------------------------------ |
+| `onLongPress`           | 长按触发，参数`()=>{}`                     |
+| `onLongPressStart`      | 长按开始时[长按触发时]触发，参数`(e)=>{}`  |
+| `onLongPressEnd`        | 长按结束时[长按抬起]触发，参数`(e)=>{}`    |
+| `onLongPressDown`       | 长按按下时[单点也可]触发，参数`(e)=>{}`    |
+| `onLongPressUp`         | 长按抬起时触发，参数`()=>{}`               |
+| `onLongPressMoveUpdate` | 长按后移动更新时触发，参数`(e)=>{}`        |
+| `onLongPressCancel`     | 长按取消时[也可移出组件]触发，参数`()=>{}` |
+
+![image-20240228002910958](https://www.z4a.net/images/2024/02/28/image-20240228002910958.png)
+
+```dart
+class Test4 extends StatelessWidget{
+  const Test4({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return ListView(
+      children: [
+        ListTile(
+          title: GestureDetector(
+            onLongPress: ()=>print("长按触发：====="),
+            child: const Text("长按触发"),
+          ),
+        ),
+        Container(height: 1,color: Colors.black87,),
+        ListTile(
+          title: GestureDetector(
+            onLongPressStart: (e)=>print("长按开始时[长按触发时]触发：$e"),
+            child: const Text("长按开始时触发"),
+          ),
+        ),
+        Container(height: 1,color: Colors.black87,),
+        ListTile(
+          title: GestureDetector(
+            onLongPressEnd: (e)=>print("长按结束时[长按抬起]触发：$e"),
+            child: const Text("长按结束时触发"),
+          ),
+        ),
+        Container(height: 1,color: Colors.black87,),
+        ListTile(
+          title: GestureDetector(
+            onLongPressDown: (e)=>print("长按按下时[单点也可]触发：$e"),
+            child: const Text("长按按下时触发"),
+          ),
+        ),
+        Container(height: 1,color: Colors.black87,),
+        ListTile(
+          title: GestureDetector(
+            onLongPressUp: ()=>print("长按抬起时触发：===="),
+            child: const Text("长按抬起时触发"),
+          ),
+        ),
+        Container(height: 1,color: Colors.black87,),
+        ListTile(
+          title: GestureDetector(
+            onLongPressMoveUpdate: (e)=>print("长按后移动更新时触发：$e"),
+            child: const Text("长按后移动更新时触发"),
+          ),
+        ),
+        Container(height: 1,color: Colors.black87,),
+        ListTile(
+          title: GestureDetector(
+            onLongPressCancel: ()=>print("长按取消时触发：===="),
+            child: const Text("长按取消时触发"),
+          ),
+        ),
+      ],
+    );
+  }
+}
+```
+
+#### Drag拖动 属性
+
+------
+
+| 属性                     | 说明                        |
+| ------------------------ | --------------------------- |
+| `onVerticalDragStart`    | 开始垂直移动，参数`(e)=>{}` |
+| `onVerticalDragUpdate`   | 持续垂直移动，参数`(e)=>{}` |
+| `onVerticalDragEnd`      | 结束垂直移动，参数`(e)=>{}` |
+| `onHorizontalDragStart`  | 开始水平移动，参数`(e)=>{}` |
+| `onHorizontalDragUpdate` | 持续水平移动，参数`(e)=>{}` |
+| `onHorizontalDragEnd`    | 结束水平移动，参数`(e)=>{}` |
+
+![image-20240228003019407](https://www.z4a.net/images/2024/02/28/image-20240228003019407.png)
+
+```dart
+class Test5 extends StatelessWidget{
+  const Test5({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return Center(
+      child: GestureDetector(
+          onVerticalDragStart: (e)=>print("开始垂直移动,$e"),
+          onVerticalDragUpdate: (e)=>print("持续垂直移动,$e"),
+          onVerticalDragEnd: (e)=>print("结束垂直移动,$e"),
+          onHorizontalDragStart: (e)=>print("开始水平移动,$e"),
+          onHorizontalDragUpdate: (e)=>print("持续水平移动,$e"),
+          onHorizontalDragEnd: (e)=>print("结束水平移动,$e"),
+          child: Container(
+            width: 150,
+            height: 50,
+            color: Colors.green,
+            child: const Center(
+              child: Text("按住我移动一下"),
+            ),
+          )
+      ),
+    );
+  }
+}
+```
+
+#### 事件隔离
+
+------
+
+因为通过`Listener()`可以拿到子组件**Widget**的信息，使用`AbsorbPointer()`组件和`IgnorePointer()`组件可以使得这些信息**不允许打印**出来，而两者的**用法一样**，只是属性不一样
+
+| 组件              | 属性        | 说明                                |
+| ----------------- | ----------- | ----------------------------------- |
+| `AbsorbPointer()` | `absorbing` | `true` ：不会打印，`false` ：会打印 |
+| `IgnorePointer()` | `ignoring`  | `true` ：不会打印，`false` ：会打印 |
+
+![image-20240228003116469](https://www.z4a.net/images/2024/02/28/image-20240228003116469.png)
+
+```dart
+class Test6 extends StatelessWidget{
+  const Test6({super.key});
+
+
+  @override
+  Widget build(BuildContext context) {
+    return Flex(
+      direction: Axis.horizontal,
+      children: [
+        Container(width: 5),
+        Expanded(
+          flex: 1,
+          child: IgnorePointer(
+            ignoring: true,
+            child: Listener(
+              onPointerDown: (e)=>print("点了第一个ignoring: true，$e"),
+              child: Container(
+                height: 50,
+                color: Colors.green,
+                child: const Text("ignoring: true"),
+              ),
+            ),
+          )),
+        Container(width: 5),
+        Expanded(
+          flex: 1,
+          child: AbsorbPointer(
+            absorbing: false,
+            child: Listener(
+              onPointerDown: (e)=>print("点了第二个,absorbing: false，$e"),
+              child: Container(
+                height: 50,
+                color: Colors.lightBlueAccent,
+                child: const Text("absorbing: false"),
+              ),
+            ),
+          )),
+        Container(width: 5),
+      ],
+    );
+  }
+}
+```
+
+
+
+
+
+# demo
+
+------
+
+[Turing158/flutter-demo (github.com)](https://github.com/Turing158/flutter-demo)
+
+[Turing_ICE/flutter-demo (gitee.com)](https://gitee.com/turing-ice/flutter-demo)
+
+
+
 ------
 
 *待更新 ...*
