--- a/_posts/2024-02-15-Flutter-入门到入土[总].md
+++ b/_posts/2024-02-15-Flutter-入门到入土[总].md
@@ -2136,6 +2136,245 @@ class Test6 extends StatelessWidget{
 ```
 
 
+## 输入框
+
+------
+
+使用TextField()可以创建出一个输入框，Flutter为输入框提供了非常多的属性，供开发人员自定义输入框
+
+### 属性
+
+------
+
+| 属性                    | 说明                         | 参数                      |
+| ----------------------- | ---------------------------- | ------------------------- |
+| `controller`            | 控制器，文本的交互需要它     | `TextEditingController()` |
+| `decoration`            | 输入框的装饰选项             | `InputDecoration()`       |
+| `textInputAction`       | 键盘左下角的按钮类型         | `TextInputAction.*`       |
+| `textCapitalization`    | 键盘默认大小写               | `TextCapitalization.*`    |
+| `autofocus`             | 是否自动聚焦到输入框         | `bool`，默认`false`       |
+| `obscureText`           | 是否将文本变成点，即隐藏文本 | `bool`，默认`false`       |
+| `autocorrect`           | 是否自动更正                 | `bool`，默认`true`        |
+| `maxLength`             | 最大输入字符数               | `int`                     |
+| `cursorWidth`           | 光标宽度                     | `int`，默认`2.0`          |
+| `cursorColor`           | 光标颜色                     | `color`                   |
+| `cursorRadius`          | 光标圆角                     | `Radius.circular(*)`      |
+| `cursorHeight`          | 光标高度                     | `int`                     |
+| `cursorOpacityAnimates` | 光标是否开启闪烁动画         | `bool`                    |
+| `inputFormatters`       | 限制输入文字/数字            | `[]`                      |
+| `onTap`                 | 点击输入框事件               | `(){事件}`                |
+| `onTapOutside`          | 点击输入框外事件             | `(){事件}`                |
+| `onChanged`             | 输入框变更事件               | `(e){事件}`               |
+| `onEditingComplete`     | 输入框完成输入事件           | `(){事件}`                |
+| `onSubmitted`           | 输入框提交事件               | `(){事件}`                |
+| `enabled`               | 是否启用输入框               | `bool`                    |
+
+### Controller
+
+一般来说，使用控制器直接使用该对象就好了
+
+```dart
+TextEditingController controller = TextEditingController();
+```
+
+| 方法      | 用途                         |
+| --------- | ---------------------------- |
+| `clear()` | 清除使用该控制器的输入框内容 |
+| `text()`  | 设置使用该控制器的输入框内容 |
+
+但是，使用`TextEditingController.fromValue(*)`可以自定义输入框的一些属性，*为`TextPosition()`
+
+而`TextPosition()`有以下两个属性
+
+| 属性        | 说明                                         |
+| ----------- | -------------------------------------------- |
+| `text`      | 设置使用该控制器的输入框内容，参数为`String` |
+| `selection` | 设置输入框内边距，参数请继续看↓              |
+
+selection的参数为TextSelection.fromPosition(*)，而里面又需要TextPosition()，里面只有两个属性
+
+| 属性       | 说明                                      |
+| ---------- | ----------------------------------------- |
+| `affinity` | 一般填`TextAffinity.downstream`           |
+| `offset`   | 输入框的光标距离最左边的距离，参数为`int` |
+
+
+
+### decoration
+
+可以让输入框自定义成想要的样式，参数为`InputDecoration()`，以下为`InputDecoration()`的属性
+
+| 属性             | 说明                               | 参数                                           |
+| ---------------- | ---------------------------------- | ---------------------------------------------- |
+| `icon`           | 最左侧的图标，图标下无横线         | `Icon()`                                       |
+| `labelText`      | 悬浮文字                           | `String`                                       |
+| `labelStyle`     | 悬浮文字样式                       | `TextStyle()`                                  |
+| `helperText`     | 帮助文字                           | `String`                                       |
+| `helperStyle`    | 帮助文字样式                       | `TextStyle()`                                  |
+| `hintText`       | 提示文字                           | `String`                                       |
+| `hintStyle`      | 提示文字样式                       | `TextStyle()`                                  |
+| `errorText`      | 错误文字                           | `String`                                       |
+| `errorStyle`     | 错误文字样式                       | `TextStyle()`                                  |
+| `contentPadding` | 内容内边距                         | `EdgeInsets.all(*)`                            |
+| `prefixIcon`     | 最左边的图标，包含在横线内         | `Icon()`                                       |
+| `prefix`         | 最左边自定义Widget                 | `Widget`                                       |
+| `prefixText`     | 最左边文字，只有当输入框聚焦才显示 | `String`                                       |
+| `prefixStyle`    | 最左边文字样式                     | `TextStyle()`                                  |
+| `suffixIcon`     | 最右边的图标，包含在横线内         | `Icon()`                                       |
+| `suffix`         | 最右边自定义Widget                 | `Widget`                                       |
+| `suffixText`     | 最右边文字，只有当输入框聚焦才显示 | `String`                                       |
+| `suffixStyle`    | 最右边文字样式                     | `TextStyle()`                                  |
+| `counter`        | 自定义计数器Widget                 | `Widget`                                       |
+| `counterText`    | 计数器文本                         | `String`                                       |
+| `counterStyle`   | 计数器文本样式                     | `TextStyle()`                                  |
+| `filled`         | 是否填充颜色                       | `bool`，默认`false`                            |
+| `fillColor`      | 填充颜色                           | `Color`                                        |
+| `border`         | 输入框整体边框，看下面教程         | `InputBorder.none`或`OutlineInputBorder()`     |
+| `enabledBorder`  | 输入框可用时边框，看下面教程       | `InputBorder.none`或不填`OutlineInputBorder()` |
+| `disabledBorder` | 输入框禁用时边框，看下面教程       | `InputBorder.none`或不填`OutlineInputBorder()` |
+| `errorBorder`    | 输入框错误时边框，看下面教程       | `InputBorder.none`或不填`OutlineInputBorder()` |
+| `focusedBorder`  | 输入框聚焦时边框，看下面教程       | `InputBorder.none`或不填`OutlineInputBorder()` |
+
+### border参数详解
+
+参数为`InputBorder.none`时，输入框不会显示下横线
+
+参数为`OutlineInputBorder()`，需要通过属性`borderRadius`设置圆角，`borderRadius`的参数为`BorderRadius.all(Radius.circular(*))`
+
+参数为`UnderlineInputBorder()`，输入框只会在下面显示一条线
+
+最后两个参数的属性`borderSide`可以设置线条颜色，参数为`BorderSide(color: Colors.*)`
+
+### 放demo
+
+![image-20240302195145912](https://www.z4a.net/images/2024/03/02/image-20240302195145912.png)
+
+```dart
+class AllInput extends StatelessWidget{
+  AllInput({super.key});
+
+  TextEditingController controller = TextEditingController();
+
+  void clearInput(){
+    controller.clear();
+  }
+  TextEditingController userInputController = TextEditingController();
+  void clearUserInput(){
+    userInputController.clear();
+  }
+
+  @override
+  Widget build(BuildContext context) {
+    controller = TextEditingController.fromValue(
+      TextEditingValue(
+        text: "初始化文本",
+        selection: TextSelection.fromPosition(
+          const TextPosition(
+            affinity: TextAffinity.downstream,
+            offset: 5
+          )
+        )
+      )
+    );
+    return ListView(
+      children: [
+        const ListTile(
+          title: TextField(),//最简单的输入框
+        ),
+        ListTile(
+          title: TextField(
+            controller: controller,
+            textInputAction: TextInputAction.next,
+            textCapitalization: TextCapitalization.characters,
+            autofocus: true,
+            obscureText: true,
+            autocorrect: true,
+            onTap: ()=>print("你点击了输入框"),
+            onChanged: (e){
+              print("你输入了${e.characters}/共${e.length}字");
+            },
+            cursorWidth: 10,
+            cursorColor: Colors.green,
+            cursorRadius: const Radius.circular(5),
+            cursorHeight: 50,
+            cursorOpacityAnimates: true,
+            inputFormatters: [],
+
+          ),
+        ),
+        ListTile(
+          title: TextField(
+            controller: controller,
+            enabled: false,
+          ),
+        ),
+        const ListTile(
+          title: TextField(
+            decoration: InputDecoration(
+              hintText: "灰色提示文字",
+              icon: Icon(Icons.account_box)
+            ),
+          ),
+        ),
+        const ListTile(
+          title: TextField(
+            decoration: InputDecoration(
+              hintText: "灰色提示文字",
+              prefixIcon: Icon(Icons.facebook_outlined),
+              suffixIcon: Icon(Icons.clear),
+            ),
+          ),
+        ),
+        const ListTile(
+          title: TextField(
+            decoration: InputDecoration(
+              hintText: "灰色提示文字",
+              prefix: Text("user"),
+              suffix: Text("后缀"),
+            ),
+          ),
+        ),
+        const ListTile(
+          title: TextField(
+            decoration: InputDecoration(
+              hintText: "灰色提示文字",
+              label: Text("label"),
+              helperText: "帮助文字",
+              errorText: "错误提示",
+              contentPadding: EdgeInsets.all(10),
+              counterText: "计数器",
+              filled: true,
+              fillColor: Colors.green
+            ),
+          ),
+        ),
+        ListTile(
+          title: TextField(
+            controller: userInputController,
+            textInputAction: TextInputAction.next,
+            decoration: const InputDecoration(
+              hintText: "请输入用户名",
+              labelText: "用户名",
+              prefixIcon: Icon(Icons.account_box),
+              filled: true,
+              fillColor: Colors.white70,
+              focusedBorder: OutlineInputBorder(
+                borderSide: BorderSide(
+                  color: Colors.lightBlue
+                ),
+                borderRadius: BorderRadius.all(Radius.circular(10))
+              )
+            ),
+
+          ),
+        )
+      ],
+    );
+  }
+}
+
+```
+
 
 
 
