--- a/_posts/2024-02-15-Flutter-入门到入土[总].md
+++ b/_posts/2024-02-15-Flutter-入门到入土[总].md
@@ -1790,15 +1790,15 @@ class BtnTest4 extends StatelessWidget{
 }
 ```
 
-# 事件
+## 事件
 
-## PointerEvents
+### PointerEvents
 
 ------
 
 最简单的事件监听，通过Listener()去监听子组件的行为 tips：以下的`e`和`event`都是`event`，只是个变量而已
 
-### 属性
+#### 属性
 
 | 属性             | 说明                                   |
 | ---------------- | -------------------------------------- |
@@ -1850,13 +1850,13 @@ class Test1 extends StatelessWidget{
 }
 ```
 
-## GestureDetector
+### GestureDetector
 
 ------
 
 GestureDetector封装了非常多的触发类型，所以直接使用GestureDetector()组件可以直接使用这些监听类型
 
-### Tap单击 属性
+#### Tap单击 属性
 
 ------
 
@@ -1910,7 +1910,7 @@ class Test2 extends StatelessWidget{
 }
 ```
 
-### DoubleTap双击 属性
+#### DoubleTap双击 属性
 
 ------
 
@@ -1956,7 +1956,7 @@ class Test3 extends StatelessWidget{
 }
 ```
 
-### LongPress长按 属性
+#### LongPress长按 属性
 
 ------
 
@@ -2034,7 +2034,7 @@ class Test4 extends StatelessWidget{
 }
 ```
 
-### Drag拖动 属性
+#### Drag拖动 属性
 
 ------
 
@@ -2077,7 +2077,7 @@ class Test5 extends StatelessWidget{
 }
 ```
 
-### 事件隔离
+#### 事件隔离
 
 ------
 
